[gd_scene load_steps=2 format=3 uid="uid://ctb5g5lgnprqk"]

[ext_resource type="Script" uid="uid://doqq676ws0e6" path="res://Resources/UI/KeyForgeUI.gd" id="1_3k5wm"]

[node name="KeyForgeUI" type="CanvasLayer"]
script = ExtResource("1_3k5wm")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Background" type="PanelContainer" parent="Control"]
layout_mode = 0
offset_right = 1200.0
offset_bottom = 800.0
mouse_filter = 1

[node name="VBox" type="VBoxContainer" parent="Control/Background"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TitleBar" type="MarginContainer" parent="Control/Background/VBox"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20

[node name="TitleLabel" type="Label" parent="Control/Background/VBox/TitleBar"]
layout_mode = 2
text = "KEY FORGE"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Control/Background/VBox"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Control/Background/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="RecipesContainer" type="VBoxContainer" parent="Control/Background/VBox/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="CloseButton" type="Button" parent="Control/Background"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "X"
